# medical-shape

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  README.rst  configure.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker_build.yaml  docker_dev.yaml  docker_stable.yaml  dockers.yaml  package_build.yaml  publish_pypi.yaml  setup_from_template.yaml  unittest.yaml
data/tests/: test_shape.pts  test_shape_with_affine_with_descriptions.mjson  test_shape_with_affine_without_descriptions.mjson  test_shape_without_affine_with_descriptions.mjson  test_shape_without_affine_without_descriptions.mjson
dockers/: Dockerfile  cpu.Dockerfile  cuda.Dockerfile  dev.Dockerfile
medical_shape/: __init__.py  shape.py  subject.py
medical_shape/io/: __init__.py  read.py  write.py
medical_shape/transforms/: __init__.py  affine.py  anisotropy.py  copy_affine.py  crop.py  crop_or_pad.py  crop_or_pad_per_image.py  mixin.py  normalization.py  pad.py  resample.py  rescale_intensity.py  to_canonical.py  to_orientation.py
scripts/: shape_to_canonical.py
shape/: __init__.py  apply_to_collection.py  normalization.py  shape.py  subject.py
shape/io/: __init__.py  read.py  write.py
shape/transforms/: __init__.py  affine.py  anisotropy.py  copy_affine.py  crop.py  crop_or_pad.py  crop_or_pad_per_image.py  mixin.py  normalization.py  pad.py  resample.py  rescale_intensity.py  to_canonical.py
shape_image/: __init__.py  collate.py  io.py  normalization.py  shape_subject.py
shape_image/image/: __init__.py  batched.py  shape_image.py
shape_image/transforms/: __init__.py  affine.py  base.py  crop.py  random.py
tests/: conftest.py  test_basics.py  test_shape.py
tests/transforms/: test_to_orientation.py
