
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "shape/_version.py"

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39"]
