[metadata]
name = shape_image
version = attr: shape_image.__version__
description = This is a super duper package
long_description = file: README.rst
author = Justus Schock
author_email = justus.schock@posteo.de
url = https://github.com/justusschock/shape-image
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, medical, AI
project_urls =
    source = https://github.com/justusschock/shape-image
    tracker = https://github.com/justusschock/shape-image/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    torch
    pytorch-lightning
    rising
    scikit-learn
    SimpleITK

# [options.entry_points]
# console_scripts =
#     executable-name = package.module:function

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
