[metadata]
name = medical_shape
version = attr: shape.__version__
description = This is a super duper package
long_description = file: README.rst
author = Justus Schock
author_email = justus.schock@posteo.de
url = https://github.com/justusschock/medical-shape
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, medical, AI
project_urls =
    source = https://github.com/justusschock/medical-shape
    tracker = https://github.com/justusschock/medical-shape/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    torch >= 1.7.*
    rising >= 0.2.1
    torchio >= 0.18.71
    medical-dl-utils >= 0.0.2

[options.extras_require]
dev =
    coverage>5.2
    codecov>=2.1
    pytest==6.*
    pytest-cov>2.10
    pytest-doctestplus>=0.9.0
    check-manifest
    twine>=3.2
    mypy>=0.790
    phmdoctest>=1.1.1
    pytest-sugar
    black
    isort

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
